<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F1817"
    tools:context=".MainActivity">

    <!-- ГАЙДЛАЙН на 20% от высоты экрана (для отступа сверху) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <!-- TITLE -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#00FF9C"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- WELCOME -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#E6E6E6"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <!-- SUBTITLE -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:textSize="20sp"
        android:textColor="#A0A0A0"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- INPUT 1 (Email) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view6"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:background="@drawable/edit"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_gmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            app:tint="@color/neon_green" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/dark_text_secondary"
            android:textColor="@color/dark_text_secondary"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/imageView1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:inputType="textEmailAddress"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- INPUT 2 (Password) – ИСПРАВЛЕН hint и inputType -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view7"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:background="@drawable/edit"
        app:layout_constraintTop_toBottomOf="@id/view6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_lock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            app:tint="@color/neon_green" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/dark_text_secondary"
            android:textColor="@color/dark_text_secondary"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- SWITCH -->
    <Switch
        android:id="@+id/switch1"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:text="@string/remember_me"
        android:textSize="18sp"
        android:textColor="#E6E6E6"
        app:layout_constraintTop_toBottomOf="@id/view7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:textColor="#00FF9C"
        app:layout_constraintEnd_toEndOf="@id/switch1"
        app:layout_constraintTop_toBottomOf="@id/switch1"
        android:layout_marginTop="5dp" />

    <!-- BUTTON -->
    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="#00FF9C"
        android:textSize="25sp"
        android:textColor="#0F1817"
        app:layout_constraintTop_toBottomOf="@id/switch1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <!-- Нижний блок (Нет аккаунта? Зарегистрироваться) -->
    <!-- Привязываем к bottom с отступом, а не к кнопке с большим marginTop -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="60dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textSize="20sp"
            android:textColor="#E6E6E6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="#00FF9C"
            app:layout_constraintStart_toEndOf="@id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="12dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>