<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckPlan"
    android:background="#0F1817">

    <!-- Кнопка "Назад" -->
    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_left_arrow"
        app:tint="@color/white" />

    <!-- Главный заголовок -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/planAccept"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Основная карточка плана -->
    <LinearLayout
        android:id="@+id/viewPlan"
        android:layout_width="370dp"
        android:layout_height="630dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:background="@drawable/card_background"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation">



        <!-- Заголовок плана -->
        <TextView
            android:id="@+id/tvPlanTitle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textAlignment="center"
            android:text="@string/namePlan"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Описание -->
        <TextView
            android:id="@+id/tvPlanDescription"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/descriptonPlan"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Блок шагов -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/planForday"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- RecyclerView – теперь wrap_content -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSteps"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            android:background="@drawable/card_background"
            android:nestedScrollingEnabled="false" />

        <!-- Блок с 4 кнопками -->
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:weightSum="4"
            android:gravity="center"
            android:background="@drawable/button_background"
            android:padding="8dp">

            <!-- Сохранить -->
            <LinearLayout
                android:id="@+id/llSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_save"
                    app:tint="@color/neon_green" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/savePlan"
                    android:textColor="@color/neon_green"
                    android:textSize="10sp" />
            </LinearLayout>

            <!-- Переделать -->
            <LinearLayout
                android:id="@+id/llReset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_reset"
                    app:tint="@color/neon_green" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/resetPlan"
                    android:textColor="@color/neon_green"
                    android:textSize="10sp" />
            </LinearLayout>

            <!-- Редактировать -->
            <LinearLayout
                android:id="@+id/llEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_pencil"
                    app:tint="@color/neon_green" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/editPlan"
                    android:textColor="@color/neon_green"
                    android:textSize="10sp" />
            </LinearLayout>

            <!-- Удалить -->
            <LinearLayout
                android:id="@+id/llDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/neon_green" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/deletePlan"
                    android:textColor="@color/neon_green"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- Нижнее меню навигации -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/line_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/menuHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_home"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/neon_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/menuBooks" />

        <ImageView
            android:id="@+id/menuBooks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_book"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menuHome"
            app:layout_constraintEnd_toStartOf="@+id/menuHistory" />

        <ImageView
            android:id="@+id/menuHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_history"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menuBooks"
            app:layout_constraintEnd_toStartOf="@+id/menuProfile" />

        <ImageView
            android:id="@+id/menuProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_user"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menuHistory"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>